src/XamlCompiler/BuildTasks/BindingPath/BindingPathParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from BindingPath.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class BindingPathParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, WS=9, 
		ESCAPEDQUOTE=10, QUOTE=11, DOUBLE_QUOTE=12, TRUE=13, FALSE=14, NULL=15, 
		Digits=16, QuotedString=17, IDENTIFIER=18;
	public const int
		RULE_program = 0, RULE_decimal_value = 1, RULE_boolean_value = 2, RULE_namespace_qualifier = 3, 
		RULE_static_type = 4, RULE_attached_expr = 5, RULE_cast_expr = 6, RULE_function = 7, 
		RULE_path = 8, RULE_function_param = 9;
	public static readonly string[] ruleNames = {
		"program", "decimal_value", "boolean_value", "namespace_qualifier", "static_type", 
		"attached_expr", "cast_expr", "function", "path", "function_param"
	};

	private static readonly string[] _LiteralNames = {
		null, "'-'", "'.'", "':'", "'('", "')'", "','", "'['", "']'", null, null, 
		"'''", "'\"'", "'x:True'", "'x:False'", "'x:Null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "WS", "ESCAPEDQUOTE", 
		"QUOTE", "DOUBLE_QUOTE", "TRUE", "FALSE", "NULL", "Digits", "QuotedString", 
		"IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BindingPath.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public BindingPathParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(BindingPathParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 20; path(0);
			State = 21; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Decimal_valueContext : ParserRuleContext {
		public ITerminalNode[] Digits() { return GetTokens(BindingPathParser.Digits); }
		public ITerminalNode Digits(int i) {
			return GetToken(BindingPathParser.Digits, i);
		}
		public Decimal_valueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decimal_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterDecimal_value(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitDecimal_value(this);
		}
	}

	[RuleVersion(0)]
	public Decimal_valueContext decimal_value() {
		Decimal_valueContext _localctx = new Decimal_valueContext(Context, State);
		EnterRule(_localctx, 2, RULE_decimal_value);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 24;
			_la = TokenStream.La(1);
			if (_la==T__0) {
				{
				State = 23; Match(T__0);
				}
			}

			State = 26; Match(Digits);
			State = 29;
			_la = TokenStream.La(1);
			if (_la==T__1) {
				{
				State = 27; Match(T__1);
				State = 28; Match(Digits);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Boolean_valueContext : ParserRuleContext {
		public ITerminalNode TRUE() { return GetToken(BindingPathParser.TRUE, 0); }
		public ITerminalNode FALSE() { return GetToken(BindingPathParser.FALSE, 0); }
		public Boolean_valueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolean_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterBoolean_value(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitBoolean_value(this);
		}
	}

	[RuleVersion(0)]
	public Boolean_valueContext boolean_value() {
		Boolean_valueContext _localctx = new Boolean_valueContext(Context, State);
		EnterRule(_localctx, 4, RULE_boolean_value);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 31;
			_la = TokenStream.La(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespace_qualifierContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(BindingPathParser.IDENTIFIER, 0); }
		public Namespace_qualifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace_qualifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterNamespace_qualifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitNamespace_qualifier(this);
		}
	}

	[RuleVersion(0)]
	public Namespace_qualifierContext namespace_qualifier() {
		Namespace_qualifierContext _localctx = new Namespace_qualifierContext(Context, State);
		EnterRule(_localctx, 6, RULE_namespace_qualifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33; Match(IDENTIFIER);
			State = 34; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Static_typeContext : ParserRuleContext {
		public Namespace_qualifierContext namespace_qualifier() {
			return GetRuleContext<Namespace_qualifierContext>(0);
		}
		public ITerminalNode IDENTIFIER() { return GetToken(BindingPathParser.IDENTIFIER, 0); }
		public Static_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_static_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterStatic_type(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitStatic_type(this);
		}
	}

	[RuleVersion(0)]
	public Static_typeContext static_type() {
		Static_typeContext _localctx = new Static_typeContext(Context, State);
		EnterRule(_localctx, 8, RULE_static_type);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36; namespace_qualifier();
			State = 37; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Attached_exprContext : ParserRuleContext {
		public Static_typeContext static_type() {
			return GetRuleContext<Static_typeContext>(0);
		}
		public ITerminalNode[] IDENTIFIER() { return GetTokens(BindingPathParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(BindingPathParser.IDENTIFIER, i);
		}
		public Attached_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attached_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterAttached_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitAttached_expr(this);
		}
	}

	[RuleVersion(0)]
	public Attached_exprContext attached_expr() {
		Attached_exprContext _localctx = new Attached_exprContext(Context, State);
		EnterRule(_localctx, 10, RULE_attached_expr);
		try {
			State = 50;
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 39; Match(T__3);
				State = 40; static_type();
				State = 41; Match(T__1);
				State = 42; Match(IDENTIFIER);
				State = 43; Match(T__4);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 45; Match(T__3);
				State = 46; Match(IDENTIFIER);
				State = 47; Match(T__1);
				State = 48; Match(IDENTIFIER);
				State = 49; Match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Cast_exprContext : ParserRuleContext {
		public Static_typeContext static_type() {
			return GetRuleContext<Static_typeContext>(0);
		}
		public ITerminalNode IDENTIFIER() { return GetToken(BindingPathParser.IDENTIFIER, 0); }
		public Cast_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cast_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterCast_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitCast_expr(this);
		}
	}

	[RuleVersion(0)]
	public Cast_exprContext cast_expr() {
		Cast_exprContext _localctx = new Cast_exprContext(Context, State);
		EnterRule(_localctx, 12, RULE_cast_expr);
		try {
			State = 59;
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 52; Match(T__3);
				State = 53; static_type();
				State = 54; Match(T__4);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 56; Match(T__3);
				State = 57; Match(IDENTIFIER);
				State = 58; Match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(BindingPathParser.IDENTIFIER, 0); }
		public Function_paramContext[] function_param() {
			return GetRuleContexts<Function_paramContext>();
		}
		public Function_paramContext function_param(int i) {
			return GetRuleContext<Function_paramContext>(i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 14, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61; Match(IDENTIFIER);
			State = 62; Match(T__3);
			State = 64;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << Digits) | (1L << QuotedString) | (1L << IDENTIFIER))) != 0)) {
				{
				State = 63; function_param();
				}
			}

			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__5) {
				{
				{
				State = 66; Match(T__5);
				State = 67; function_param();
				}
				}
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 73; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PathContext : ParserRuleContext {
		public Microsoft.UI.Xaml.Markup.Compiler.BindPathStep PathStep;
		public PathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_path; } }
	 
		public PathContext() { }
		public virtual void CopyFrom(PathContext context) {
			base.CopyFrom(context);
			this.PathStep = context.PathStep;
		}
	}
	public partial class PathStaticFuctionContext : PathContext {
		public Static_typeContext static_type() {
			return GetRuleContext<Static_typeContext>(0);
		}
		public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		public PathStaticFuctionContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathStaticFuction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathStaticFuction(this);
		}
	}
	public partial class PathCastContext : PathContext {
		public Cast_exprContext cast_expr() {
			return GetRuleContext<Cast_exprContext>(0);
		}
		public PathCastContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathCast(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathCast(this);
		}
	}
	public partial class PathPathToFunctionContext : PathContext {
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		public PathPathToFunctionContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathPathToFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathPathToFunction(this);
		}
	}
	public partial class PathIndexerContext : PathContext {
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public ITerminalNode Digits() { return GetToken(BindingPathParser.Digits, 0); }
		public PathIndexerContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathIndexer(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathIndexer(this);
		}
	}
	public partial class PathCastInvalidContext : PathContext {
		public Attached_exprContext attached_expr() {
			return GetRuleContext<Attached_exprContext>(0);
		}
		public PathCastInvalidContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathCastInvalid(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathCastInvalid(this);
		}
	}
	public partial class PathCastPathParenContext : PathContext {
		public Cast_exprContext cast_expr() {
			return GetRuleContext<Cast_exprContext>(0);
		}
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public PathCastPathParenContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathCastPathParen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathCastPathParen(this);
		}
	}
	public partial class PathFunctionContext : PathContext {
		public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		public PathFunctionContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathFunction(this);
		}
	}
	public partial class PathStringIndexerContext : PathContext {
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public ITerminalNode QuotedString() { return GetToken(BindingPathParser.QuotedString, 0); }
		public PathStringIndexerContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathStringIndexer(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathStringIndexer(this);
		}
	}
	public partial class PathIdentifierContext : PathContext {
		public ITerminalNode IDENTIFIER() { return GetToken(BindingPathParser.IDENTIFIER, 0); }
		public PathIdentifierContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathIdentifier(this);
		}
	}
	public partial class PathCastPathContext : PathContext {
		public Cast_exprContext cast_expr() {
			return GetRuleContext<Cast_exprContext>(0);
		}
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public PathCastPathContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathCastPath(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathCastPath(this);
		}
	}
	public partial class PathStaticIdentifierContext : PathContext {
		public Static_typeContext static_type() {
			return GetRuleContext<Static_typeContext>(0);
		}
		public ITerminalNode IDENTIFIER() { return GetToken(BindingPathParser.IDENTIFIER, 0); }
		public PathStaticIdentifierContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathStaticIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathStaticIdentifier(this);
		}
	}
	public partial class PathDotIdentifierContext : PathContext {
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public ITerminalNode IDENTIFIER() { return GetToken(BindingPathParser.IDENTIFIER, 0); }
		public PathDotIdentifierContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathDotIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathDotIdentifier(this);
		}
	}
	public partial class PathDotAttachedContext : PathContext {
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public Attached_exprContext attached_expr() {
			return GetRuleContext<Attached_exprContext>(0);
		}
		public PathDotAttachedContext(PathContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.EnterPathDotAttached(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBindingPathListener typedListener = listener as IBindingPathListener;
			if (typedListener != null) typedListener.ExitPathDotAttached(this);
		}
	}

	[RuleVersion(0)]
	public PathContext path() {
		return path(0);
	}

	private PathContext path(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		PathContext _localctx = new PathContext(Context, _parentState);
		PathContext _prevctx = _localctx;
		int _startState = 16;
		EnterRecursionRule(_localctx, 16, RULE_path, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				_localctx = new PathCastPathContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 76; cast_expr();
				State = 77; path(5);
				}
				break;
			case 2:
				{
				_localctx = new PathIdentifierContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 79; Match(IDENTIFIER);
				}
				break;
			case 3:
				{
				_localctx = new PathStaticIdentifierContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 80; static_type();
				State = 81; Match(T__1);
				State = 82; Match(IDENTIFIER);
				}
				break;
			case 4:
				{
				_localctx = new PathCastInvalidContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 84; attached_expr();
				}
				break;
			case 5:
				{
				_localctx = new PathCastContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 85; cast_expr();
				}
				break;
			case 6:
				{
				_localctx = new PathCastPathParenContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 86; Match(T__3);
				State = 87; cast_expr();
				State = 88; path(0);
				State = 89; Match(T__4);
				}
				break;
			case 7:
				{
				_localctx = new PathFunctionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 91; function();
				}
				break;
			case 8:
				{
				_localctx = new PathStaticFuctionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 92; static_type();
				State = 93; Match(T__1);
				State = 94; function();
				}
				break;
			}
			Context.Stop = TokenStream.Lt(-1);
			State = 117;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 115;
					switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
					case 1:
						{
						_localctx = new PathDotIdentifierContext(new PathContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_path);
						State = 98;
						if (!(Precpred(Context, 12))) throw new FailedPredicateException(this, "Precpred(Context, 12)");
						State = 99; Match(T__1);
						State = 100; Match(IDENTIFIER);
						}
						break;
					case 2:
						{
						_localctx = new PathIndexerContext(new PathContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_path);
						State = 101;
						if (!(Precpred(Context, 10))) throw new FailedPredicateException(this, "Precpred(Context, 10)");
						State = 102; Match(T__6);
						State = 103; Match(Digits);
						State = 104; Match(T__7);
						}
						break;
					case 3:
						{
						_localctx = new PathStringIndexerContext(new PathContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_path);
						State = 105;
						if (!(Precpred(Context, 9))) throw new FailedPredicateException(this, "Precpred(Context, 9)");
						State = 106; Match(T__6);
						State = 107; Match(QuotedString);
						State = 108; Match(T__7);
						}
						break;
					case 4:
						{
						_localctx = new PathDotAttachedContext(new PathContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_path);
						State = 109;
						if (!(Precpred(Context, 8))) throw new FailedPredicateException(this, "Precpred(Context, 8)");
						State = 110; Match(T__1);
						State = 111; attached_expr();
						}
						break;
					case 5:
						{
						_localctx = new PathPathToFunctionContext(new PathContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_path);
						State = 112;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 113; Match(T__1);
						State = 114; function();
						}
						break;
					}
					} 
				}
				State = 119;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
